@@ -1,0 +1,9 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+class Net::SSLeay::Callback::Verify : interface_t {
+  use Net::SSLeay::X509_STORE_CTX;
+  
+  required method : int ($preverify_ok : int, $x509_ctx : Net::SSLeay::X509_STORE_CTX);
+  
+}
